Added JWT auth, and User login route to get bearer token in swagger
